# Advent-of-Code

./: .gitignore  day1.py  day2.py  pyproject.toml
aoc2025/: day01.py  day02.py  day04.py  day05.py  day07.py  day08.py
src/aoc2025/: day03.py  day06.py  day08.py  day09.py  day10.py  day11.py  day12.py
src/utils/: disjointset.py  simplex.py
tests/: test_day01.py  test_day02.py  test_day03.py
tests/aoc2025/: test_day01.py  test_day04.py  test_day05.py
